--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -47,14 +47,6 @@
     path: /opt/kafka
     state: link
 
-- name: Create /kafka/data directory
-  file:
-    path: /kafka/data
-    state: directory
-    owner: "{{ kafka_user }}"
-    group: "{{ kafka_group }}"
-  when: data_disks_devices is not defined or not data_disks_devices or data_disks_devices|length <= 0
-
 - name: Create /disk/{0..n}/kafka/data directories
   file:
     path: "/disk/{{ item.0 + 1 }}/kafka/data"
@@ -64,12 +56,13 @@
   with_indexed_items: "{{ data_disks_devices }}"
   when: data_disks_devices is defined and data_disks_devices
 
-- name: Create Kafka log directory
+- name: Create Kafka data directory
   file:
-    path: "{{ kafka_log_dir }}"
+    path: "{{ kafka_data_dir }}"
     state: directory
     owner: "{{ kafka_user }}"
     group: "{{ kafka_group }}"
+  when: data_disks_devices is not defined or not data_disks_devices or data_disks_devices|length <= 0
 
 - name: Create Kafka conf directory
   file:
