--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -35,6 +35,7 @@ kafka_log_retention_bytes: 104857600  #100 M
 kafka_log_retention_hours: 24
 kafka_log_segment_bytes: "{{ kafka_log_retention_bytes }}"
 kafka_log_cleanup_interval_mins: 1
+kafka_log_message_timestamp_type: CreateTime
 kafka_heap_opts: "-Xmx{{ (ansible_memtotal_mb / 2) | int }}m -Xms{{ (ansible_memtotal_mb / 2) | int }}m"
 monasca_wait_for_period: 30
 monasca_log_level: WARN
