--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,3 +9,9 @@
   include: configure.yml
   tags:
     - configure
+
+- name: Wait for Kafka to start
+  wait_for:
+    host: "{{ ansible_ssh_host | default(inventory_hostname) }}"
+    port: "{{ kafka_port }}"
+    state: started
