--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -38,6 +38,7 @@ kafka_log_cleanup_interval_mins: 1
 kafka_log_message_timestamp_type: CreateTime
 kafka_heap_opts: "-Xmx{{ (ansible_memtotal_mb / 2) | int }}m -Xms{{ (ansible_memtotal_mb / 2) | int }}m"
 kafka_java_opts:
+kafka_zookeeper_connect: "{% for server in groups[zookeper_nodes_group] %}{{ hostvars[server]['inventory_hostname'] }}:{{ zookeeper_client_port }}{% if not loop.last %},{% endif %}{% endfor %}"
 monasca_wait_for_period: 30
 monasca_log_level: WARN
 zookeeper_client_port: 2181
